--- a/src/Chezar.csproj
+++ b/src/Chezar.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Models\BitOperationModel.cs" />
     <Compile Include="Models\ChezarAlgorithmModel.cs" />
     <Compile Include="Models\EntropyModel.cs" />
+    <Compile Include="Models\EvklidNodModel.cs" />
     <Compile Include="Utils\IScreenView.cs" />
     <Compile Include="ViewModels\BelazoPortViewModel.cs" />
     <Compile Include="ViewModels\BitOperationViewModel.cs" />
@@ -78,10 +79,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="ViewModels\EvklidNodViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\BelazoPortView.xaml.cs" />
     <Compile Include="Views\BitOperationView.xaml.cs" />
     <Compile Include="Views\ChezarView.xaml.cs" />
+    <Compile Include="Views\EvklidNodView.xaml.cs" />
     <Compile Include="Views\ShellView.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +109,7 @@
     <Page Include="Views\BelazoPortView.xaml" />
     <Page Include="Views\BitOperationView.xaml" />
     <Page Include="Views\ChezarView.xaml" />
+    <Page Include="Views\EvklidNodView.xaml" />
     <Page Include="Views\ShellView.xaml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
