--- a/src/Chezar.csproj
+++ b/src/Chezar.csproj
@@ -70,7 +70,9 @@
     <Compile Include="Models\ChezarAlgorithmModel.cs" />
     <Compile Include="Models\EntropyModel.cs" />
     <Compile Include="Models\EvklidNodModel.cs" />
+    <Compile Include="Models\PspModel.cs" />
     <Compile Include="Utils\IScreenView.cs" />
+    <Compile Include="Utils\PspTempItem.cs" />
     <Compile Include="ViewModels\BelazoPortViewModel.cs" />
     <Compile Include="ViewModels\BitOperationViewModel.cs" />
     <Compile Include="ViewModels\ChezarViewModel.cs" />
@@ -80,11 +82,13 @@
     </Compile>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="ViewModels\EvklidNodViewModel.cs" />
+    <Compile Include="ViewModels\PspViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\BelazoPortView.xaml.cs" />
     <Compile Include="Views\BitOperationView.xaml.cs" />
     <Compile Include="Views\ChezarView.xaml.cs" />
     <Compile Include="Views\EvklidNodView.xaml.cs" />
+    <Compile Include="Views\PspView.xaml.cs" />
     <Compile Include="Views\ShellView.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -110,6 +114,7 @@
     <Page Include="Views\BitOperationView.xaml" />
     <Page Include="Views\ChezarView.xaml" />
     <Page Include="Views\EvklidNodView.xaml" />
+    <Page Include="Views\PspView.xaml" />
     <Page Include="Views\ShellView.xaml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
